Fixes for auto configure